2009-08-12  Daniel Elstner  <daniel.kitta@gmail.com>

	Remove duplicate image files for pixbuf-demo

	* demos/pixbuf-demo.cc: Clean up a few minor things.
	(background_name), (image_names): Prefix "gtk-demo/" to the file
	names so that it can pick up the files from the subdirectory.
	* demos/Makefile.am (dist_democode_DATA): Split into two variables
	$(democode_DATA) and $(dist_democode_DATA) to avoid copying source
	code files twice into the distribution.
	* demos/background.jpg, demos/*.png: Delete duplicate image files.

2009-08-12  Daniel Elstner  <danielk@openismus.com>

	Bring back demos/ and make it non-recursive

	* configure.ac (AC_CONFIG_FILES): Add output file demos/Makefile.
	* Makefile.am (SUBDIRS): Recurse into demos/ subdirectory again.
	* demos/Makefile.am: Overhaul, modernize and make non-recursive.
	Build the demo program targets on make check instead of make all.
	Install all gtkmm-demo source files, as there is little point in
	not shipping the full compilable set.  Stop installing gtkmm-demo
	for now.  Do we really need this installed?
	* demos/gtk-demo/Makefile.am: Delete now unused file.

2009-08-12  Daniel Elstner  <danielk@openismus.com>

	Fix GLIBMM vs GTKMM typo

	* gtk/gtkmm/Makefile.am (AM_CXXFLAGS): It's $(GTKMM_WXXFLAGS).

2009-08-12  Daniel Elstner  <danielk@openismus.com>

	Un-invert DISABLE_DEPRECATED_API conditional

	* configure.ac (DISABLE_DEPRECATED_API): Invert the accidentally
	reversed test condition for AM_CONDITIONAL().

2009-08-12  Daniel Elstner  <danielk@openismus.com>

	Remove header dependency of gdkmm on gtkmm

	* gdk/src/dragcontext.hg: Remove #include <gtkmm/stockid.h>, which
	appears to have been left over from an earlier change to avoid the
	dependency.  The problem got caught due to the shortened include
	paths of the new build setup.  Also get rid of a pointless forward
	declaration of Gtk::Widget.

2009-08-12  Daniel Elstner  <danielk@openismus.com>

	Correct tag reference to pangomm
