@@ -1,17 +1,0 @@
-web_host = gtkmm.org
-web_path_gtkmm = /home/murrayc/gtkmm.org/docs/gtkmm-2.4/
-#web_path_gtkmm = /home/groups/g/gt/gtkmm/htdocs/docs/gtkmm-2.4/
-web_path_docs = $(web_path_gtkmm)docs/
-
-#--delete and --delete-after are causing
-# "
-# Invalid file index: 1768710413 (count=0) [receiver]
-# rsync error: protocol incompatibility (code 2) at sender.c(156)
-# "
-# with sourceforge recently (May 2005). murrayc.
-#
-#rsync_args = -vz --rsh ssh --delete --delete-after
-rsync_args = -vz --rsh ssh
-
-gtkmm_docdir = $(datadir)/doc/gtkmm-2.4/docs
-
