@@ -1,20 +1,0 @@
-if GTKMM_ATKMM_ENABLED
-ATKMMINC = -I$(top_builddir)/atk -I$(top_srcdir)/atk
-endif
-
-INCLUDES = \
-	$(ATKMMINC)	\
-	-I$(top_builddir)/gdk	-I$(top_srcdir)/gdk	\
-	-I$(top_builddir)/gtk	-I$(top_srcdir)/gtk	\
-	$(GTKMM_WXXFLAGS) $(GTKMM_CFLAGS) $(GTHREAD_CFLAGS)
-
-if GTKMM_ATKMM_ENABLED
-ATKMMLIB = $(local_atkmm_lib)
-endif
-
-LIBS = \
-	$(ATKMMLIB)	\
-	$(top_builddir)/gdk/gdkmm/libgdkmm-2.4.la	\
-	$(top_builddir)/gtk/gtkmm/libgtkmm-2.4.la	\
-	$(GTKMM_LIBS)
-
