@@ -1,6 +1,0 @@
-include $(top_srcdir)/tests/Makefile.am_fragment
-
-#Build the executable, but don't install it.
-noinst_PROGRAMS = test
-test_SOURCES = main.cc
-
