@@ -1,6 +1,0 @@
-include $(top_srcdir)/tests/Makefile.am_fragment
-
-noinst_PROGRAMS = test
-test_SOURCES = main.cc
-
-
