@@ -1,5 +1,16 @@
 2009-08-12  Daniel Elstner  <daniel.kitta@gmail.com>
 
+	Convert tests/ to non-recursive build
+
+	* configure.ac (AC_CONFIG_FILES): Remove tests/*/Makefile ouputs.
+	* tests/Makefile.am: Overhaul, modernize and make non-recursive.
+	Build the test program targets on make check instead of make all.
+	* tests/*/Makefile.am: Delete now unused build files.
+	* tests/Makefile.am_fragment: ditto.
+	* docs/Makefile_web.am_fragment: Delete left-over file.
+
+2009-08-12  Daniel Elstner  <daniel.kitta@gmail.com>
+
 	Remove duplicate image files for pixbuf-demo
 
 	* demos/pixbuf-demo.cc: Clean up a few minor things.
